--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Tue Nov 22 13:21:39 MST 2011
-app.grails.version=1.3.7
+#Wed Jul 18 12:44:21 MDT 2012
+app.grails.version=1.3.9
 app.name=domain-helptips
-plugins.hibernate=1.3.7
-plugins.tomcat=1.3.7
+plugins.hibernate=1.3.9
+plugins.tomcat=1.3.9
