--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,5 @@
 #Grails Metadata file
-#Wed Jul 18 12:44:21 MDT 2012
-app.grails.version=1.3.9
+#Wed Aug 06 13:23:58 MDT 2014
+app.grails.version=2.3.11
 app.name=domain-helptips
-plugins.hibernate=1.3.9
-plugins.tomcat=1.3.9
+app.servlet.version=2.5
